[gd_scene load_steps=4 format=3 uid="uid://decnhljsl7"]

[ext_resource type="Script" path="res://Scripts/Pieces/piece.gd" id="1_sbl50"]
[ext_resource type="Script" path="res://Scripts/instantiatorSquares.gd" id="2_xd2jb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_68476"]
size = Vector2(32, 38)

[node name="Piece" type="Node2D"]
script = ExtResource("1_sbl50")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(3.5, 3.5)

[node name="Instantiator" type="Node2D" parent="."]
script = ExtResource("2_xd2jb")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_68476")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
